<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/backimg"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#0A2208"
        android:text="@string/youlost" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/nodescription"
        android:src="@drawable/retry" />

        <TextView
            android:id="@+id/retryImageId"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:gravity="center"
            android:text="@string/RETRY" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"

        android:background="@drawable/roundbutton"
        android:text="@string/QUIT" />
</LinearLayout>