<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg"
    android:visibility="visible">

    <ImageView
        android:id="@+id/ImageID"
        style="@style/questionImageStyle"
        android:contentDescription="@string/contetentDescription"
        android:src="@drawable/one" />

    <TextView
        android:id="@+id/TextID"
        style="@style/questionTextStyle"
        android:layout_below="@id/ImageID"
        android:text="@string/jq1" />


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextID"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radioButtonMargin"
            android:text="@string/OPTION_1" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radioButtonMargin"
            android:text="@string/OPTION_2" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radioButtonMargin"
            android:text="@string/OPTION_3" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radioButtonMargin"
            android:text="@string/OPTION_4" />

    </RadioGroup>

    <Button
        android:id="@+id/ButtonID1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@drawable/roundbutton"
        android:text="@string/NEXT" />

    <Button
        android:id="@+id/ButtonID2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@drawable/roundbutton"
        android:text="@string/NEXT"
        android:visibility="gone" />

    <Button
        android:id="@+id/ButtonID3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@drawable/roundbutton"
        android:text="@string/NEXT"
        android:visibility="gone" />

    <Button
        android:id="@+id/ButtonID4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@drawable/roundbutton"
        android:text="@string/NEXT"
        android:visibility="gone" />

    <Button
        android:id="@+id/ButtonID5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@drawable/roundbutton"
        android:text="@string/NEXT"
        android:visibility="gone" />
</RelativeLayout>