<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg">

    <!--ALL THE BUTTONS IN FEEDBACK SECTION-->
    <LinearLayout
        android:id="@+id/FeedbackButtionsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/insID"
            style="@style/FeedbackMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="@string/Instructions" />

        <Button
            android:id="@+id/feedID"
            style="@style/FeedbackMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="@string/Feedback" />

        <Button
            android:id="@+id/reportID"
            style="@style/FeedbackMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="@string/ReportBugs" />

        <Button
            android:id="@+id/BackButtonID"
            style="@style/FeedbackMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="@string/goBACK" />
    </LinearLayout>


    <!--THE FEEDBACK LAYOUT-->
    <LinearLayout
        android:id="@+id/FeedbackId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="#fcfbd9"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView2"
            style="@style/feedback"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:gravity="center"
            android:text="@string/textview" />

        <RatingBar

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="280dp"
            android:layout_height="194dp"
            android:layout_gravity="center"
            android:contentDescription="@string/ImageDescription"
            android:src="@drawable/smilie" />

        <Button
            android:id="@+id/finishid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/roundbutton"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/SUBMIT" />

    </LinearLayout>

    <!--THE INSTRUCTIONS LAYOUT-->
    <LinearLayout
        android:id="@+id/InstructionLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="30">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/Instructions"
            android:textColor="#0A2E6C"
            android:textSize="40sp"/>

      <ScrollView
          android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--JAVA INSTRUCTIONS-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                style="@style/CARD_MARGINS"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/card1instructions"
                    android:textSize="20sp"/>

            </androidx.cardview.widget.CardView>

            <!--JAVA script INSTRUCTIONS-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                style="@style/CARD_MARGINS"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/card1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/card2instructions"
                    android:textSize="20sp"/>

            </androidx.cardview.widget.CardView>

            <!--CSS INSTRUCTIONS-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                style="@style/CARD_MARGINS"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/card2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/card3instructions"
                    android:textSize="20sp"/>

            </androidx.cardview.widget.CardView>

            <!-- PYTHON INSTRUCTIONS-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                style="@style/CARD_MARGINS"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/card3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/card4instructions"
                    android:textSize="20sp"/>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card4"
                android:id="@+id/BackButtonID2"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/roundbutton"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:text="@string/goBACK"/>
        </RelativeLayout>
      </ScrollView>
    </LinearLayout>

    <!--REPORT BUGS SECTION-->
    <LinearLayout
        android:id="@+id/BugsLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="30dp"
            android:autofillHints=""
            android:hint="@string/reportHint"
            android:inputType="text|textImeMultiLine"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/sendbuttonid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/roundbutton"
            android:text="@string/SEND" />


    </LinearLayout>
</RelativeLayout>
