<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg">
    <LinearLayout
        android:id="@+id/Rl1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="150dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/result"
            android:text="@string/yourscore"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/result"
            android:text="@string/zero"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_below="@id/Rl1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="@string/playagain"/>
    </LinearLayout>
</RelativeLayout>